--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -7,68 +7,72 @@
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
+    <script type="text/javascript" src="/static/js/mc17.js"></script>
 </head>
-<div>
-    <h2 align="center">Карта</h2>
-    <table align="center">
-        <tr>
-            <td>
-                <table>
-                    <tr>
-                        <td></td>
-                        <td><a href="/{{lang}}/move/0">
-                            <img width="64" src="/static/img/up.png" alt="">
-                        </a></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td><a href="/{{lang}}/move/3">
-                            <img width="64" src="/static/img/left.png" alt="">
-                        </a></td>
-                        <td></td>
-                        <td><a href="/{{lang}}/move/1">
-                            <img width="64" src="/static/img/right.png" alt="">
-                        </a></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><a href="/{{lang}}/move/2">
-                            <img width="64" src="/static/img/down.png" alt="">
-                        </a></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><a href="/{{lang}}/change_zoom/1">
-                            <img width="64" src="/static/img/plus.png" alt="">
-                        </a></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><a href="/{{lang}}/change_zoom/2">
-                            <img width="64" src="/static/img/minus.png" alt="">
-                        </a></td>
-                        <td></td>
-                    </tr>
-                </table>
-            </td>
-            <td width="600" height="450" style="text-align:center">
-                <object data="http://localhost:5000/api/get_image" type="image/svg+xml"
-                 id="alphasvg" width="100%" height="100%"></object>
-                <script type="text/javascript" src="/static/js/mc8.js"></script>
-                <script>
-                    var a = document.getElementById("alphasvg");
-                    a.addEventListener("load",function(){
-                        var svgDoc = a.contentDocument;
-                        var delta = svgDoc.getElementById("delta");
-                        delta.addEventListener("mousemove", handleEvent, false);
-                    }, false);
-                </script>
-            </td>
-        </tr>
-    </table>
-</div>
+<body>
+    <div>
+        <h2 align="center">Карта</h2>
+        <table align="center">
+            <tr>
+                <td>
+                    <table>
+                        <tr>
+                            <td></td>
+                            <td><a href="http://127.0.0.1:5000/{{lang}}/move/0">
+                                <img width="64" src="/static/img/up.png" alt="">
+                            </a></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td><a href="http://127.0.0.1:5000/{{lang}}/move/3">
+                                <img width="64" src="/static/img/left.png" alt="">
+                            </a></td>
+                            <td></td>
+                            <td><a href="http://127.0.0.1:5000/{{lang}}/move/1">
+                                <img width="64" src="/static/img/right.png" alt="">
+                            </a></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><a href="http://127.0.0.1:5000/{{lang}}/move/2">
+                                <img width="64" src="/static/img/down.png" alt="">
+                            </a></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><a href="/{{lang}}/change_zoom/1">
+                                <img width="64" src="/static/img/plus.png" alt="">
+                            </a></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><a href="/{{lang}}/change_zoom/2">
+                                <img width="64" src="/static/img/minus.png" alt="">
+                            </a></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </td>
+                <td width="606" height="456" style="text-align:center">
+                    <object data="/static/svg/test.svg" type="image/svg+xml"
+                     id="alphasvg" width="100%" height="100%"></object>
+                    <script>
+                        document.addEventListener("DOMContentLoaded", function(){
+                            var a = document.getElementById("alphasvg");
+                            a.addEventListener("load",function(){
+                                var svgDoc = a.contentDocument;
+                                var delta = svgDoc.getElementById("delta");
+                                delta.addEventListener("mousemove", handleEvent, false);
+                            }, false);
+                        });
+                    </script>
+                </td>
+            </tr>
+        </table>
+    </div>
+</body>
 {% for field in form if field.name != 'csrf_token' %}
 <div>
     {{ field.label() }}
