Alpha version 0.1.1 heroku

--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -17,23 +17,23 @@
                     <table>
                         <tr>
                             <td></td>
-                            <td><a href="http://127.0.0.1:5000/{{lang}}/move/0">
+                            <td><a href="/{{lang}}/move/0">
                                 <img width="64" src="/static/img/up.png" alt="">
                             </a></td>
                             <td></td>
                         </tr>
                         <tr>
-                            <td><a href="http://127.0.0.1:5000/{{lang}}/move/3">
+                            <td><a href="/{{lang}}/move/3">
                                 <img width="64" src="/static/img/left.png" alt="">
                             </a></td>
                             <td></td>
-                            <td><a href="http://127.0.0.1:5000/{{lang}}/move/1">
+                            <td><a href="/{{lang}}/move/1">
                                 <img width="64" src="/static/img/right.png" alt="">
                             </a></td>
                         </tr>
                         <tr>
                             <td></td>
-                            <td><a href="http://127.0.0.1:5000/{{lang}}/move/2">
+                            <td><a href="/{{lang}}/move/2">
                                 <img width="64" src="/static/img/down.png" alt="">
                             </a></td>
                             <td></td>
@@ -122,13 +122,13 @@
                 <td>
                     <table align="center" width="50%">
                         <tr>
-                            <td width="10%"><a href="http://127.0.0.1:5000/{{lang}}/change_date/0/2">
+                            <td width="10%"><a href="/{{lang}}/change_date/0/2">
                                 <img width="64" src="/static/img/last_year.png" alt="">
                             </a></td>
-                            <td width="10%"><a href="http://127.0.0.1:5000/{{lang}}/change_date/1/2">
+                            <td width="10%"><a href="/{{lang}}/change_date/1/2">
                                 <img width="64" src="/static/img/last_month.png" alt="">
                             </a></td>
-                            <td width="10%"><a href="http://127.0.0.1:5000/{{lang}}/change_date/2/2">
+                            <td width="10%"><a href="/{{lang}}/change_date/2/2">
                                 <img width="64" src="/static/img/last_day.png" alt="">
                             </a></td>
                             <td width="40%" align="center">
@@ -137,13 +137,13 @@
                                     <button type="submit" class="btn btn-primary" name="submit_button" value="date_change">Перейти</button>
                                 </form>
                             </td>
-                            <td width="10%"><a href="http://127.0.0.1:5000/{{lang}}/change_date/2/1">
+                            <td width="10%"><a href="/{{lang}}/change_date/2/1">
                                 <img width="64" src="/static/img/next_day.png" alt="">
                             </a></td>
-                            <td width="10%"><a href="http://127.0.0.1:5000/{{lang}}/change_date/1/1">
+                            <td width="10%"><a href="/{{lang}}/change_date/1/1">
                                 <img width="64" src="/static/img/next_month.png" alt="">
                             </a></td>
-                            <td width="10%"><a href="http://127.0.0.1:5000/{{lang}}/change_date/0/1">
+                            <td width="10%"><a href="/{{lang}}/change_date/0/1">
                                 <img width="64" src="/static/img/next_year.png" alt="">
                             </a></td>
                         </tr>
